<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="125dp"
        tools:layout_editor_absoluteY="50dp">

        <LinearLayout
            android:id="@+id/activity_explore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:orientation="vertical"
            tools:context="eventme.eventme.EventBox">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:fontFamily="@font/nunito"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/redbrown"
                android:textSize="28dp" />

            <SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:backgroundTint="@color/redbrown"
                android:fontFamily="@font/nunito"
                android:iconifiedByDefault="false"
                android:orientation="vertical"
                android:padding="12dp"
                android:queryHint="Search..."
                android:text="@string/search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:text="ALL"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/allbutton"
                    android:textSize="12dp"
                    android:layout_margin="5dp"
                    />
                <Button
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:text="PARTY"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/partybutton"
                    android:textSize="12dp"
                    android:layout_margin="5dp"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/orange"
                    android:text="SHOPPING"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/shopbutton"
                    android:textSize="12dp"
                    android:layout_margin="5dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sortButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/redbrown"
                    android:text="COST"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/costsort"
                    android:textSize="12dp"
                    android:layout_margin="3dp"
                    />
                <Button
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/redbrown"
                    android:text="PROXIMITY"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/proximitysort"
                    android:textSize="10dp"
                    android:layout_margin="3dp"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/redbrown"
                    android:text="DATE"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/datesort"
                    android:textSize="10dp"
                    android:layout_margin="3dp"
                    />
                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/redbrown"
                    android:text="ALPHABETICAL"
                    android:fontFamily="@font/nunito"
                    android:id="@+id/alphabetsort"
                    android:textSize="10dp"
                    android:layout_margin="3dp"
                    />

            </LinearLayout>

            <ListView
                android:id="@+id/listEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat" />

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>